apps/kube-system/traefik/dashboard/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
spec:
  plugin:
    traefik-oidc-auth:
      Provider:
        Url: "https://idm.lucadev.de/oauth2/openid/traefik"
        ClientId: "traefik"
        ClientSecret: "urn:k8s:secret:traefik-secret:OIDC_SECRET"
        TokenValidation: "IdToken"
        UsePkce: true
      Scopes: ["openid", "profile"]
