apps/kube-system/traefik/dashboard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard
spec:
  addPrefix:
    prefix: /dashboard/
