apps/kube-system/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-dashboard@kubernetescrd,kube-system-traefik-auth@kubernetescrd,networking-rfc1918@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Traefik Dashboard
    gethomepage.dev/group: Netzwerk
    gethomepage.dev/icon: traefik
    gethomepage.dev/name: Traefik
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: https://traefik.lucadev.de
spec:
  rules:
    - host: traefik.lucadev.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 8080
